BREAKING CHANGE: Remove AssertJMultipleFailuresError in favor of MultipleAssertionsError
Refactor: have one setting for printing the number of stack trace elements use StandardRepresentation to represents MultipleAssertionsError